Conteudo aside e conteudo inicial do main

--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
     <div id="app">
       <main>
         <div class="main-container">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sit quibusdam sequi tenetur modi, inventore architecto necessitatibus amet, ipsa perspiciatis aspernatur accusantium rem aliquam esse soluta non, dolorum repellendus expedita.
+          <div class="back">
+            <img src="./assets/icons/arrow-left-02.svg" alt="Back icon">
+            <span>Voltar</span>
+          </div>
+
+          <h1>Formulário de matrícula</h1>
+          <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
         </div>
       </main>
 
       <aside>
         <div class="aside-container">
-          aside
+          <header>
+            <img src="./assets/logo.svg" alt="Logo">
+            <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+            <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+          </header>
+          <img src="./assets/Illustration.svg" alt="Form Illustration">
         </div>
       </aside>
     </div>
