--- a/index.html
+++ b/index.html
@@ -20,6 +20,49 @@
 
           <h1>Formulário de matrícula</h1>
           <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+          <form action="" method="post" enctype="multipart/form-data">
+            <fieldset>
+              <legend>Informações da criança</legend>
+
+              <div class="input-wrapper">
+                <label for="fullname">Nome completo</label>
+                <input 
+                type="text" 
+                id="fullname" 
+                placeholder="Digite o nome completo">
+              </div>
+
+              <div class="input-wrapper">
+                <label for="birth-date">Data de nascimento</label>
+                <input type="date" id="birth-date" lang="pt-BR">
+              </div>
+
+              <div class="select-wrapper">
+                <label for="sex-select">Sexo</label>
+                <select name="" id="sex-select">
+                  <option value="male">Masculino</option>
+                  <option value="female">Feminino</option>
+                  <option value="na">Prefiro não responder</option>
+                </select>
+              </div>
+
+              <div class="textarea-wrapper">
+                <label for="text-medical">Informações médicas</label>
+                <textarea 
+                name="" 
+                id="text-medical" cols="30" rows="10" 
+                placeholder="A criança possui alguma condição médica que a escola deve estar ciente?">
+              </textarea>
+              </div>
+
+              <div class="droparea-wrapper">
+                <input type="file" id="birth-file">
+                <img src="/assets/icons/cloud-upload.svg" alt="">
+                <p>Clique aqui para <br>selecionar arquivos</p>
+              </div>
+            </fieldset>
+          </form>
         </div>
       </main>
 
