--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
                 <label for="text-medical">Informações médicas</label>
                 <textarea 
                 name="" 
-                id="text-medical" cols="30" rows="10" 
+                id="text-medical" cols="30" rows="5" 
                 placeholder="A criança possui alguma condição médica que a escola deve estar ciente?">
               </textarea>
               </div>
 
               <div class="droparea-wrapper">
-                <input type="file" id="birth-file">
-                <img src="/assets/icons/cloud-upload.svg" alt="">
-                <p>Clique aqui para <br>selecionar arquivos</p>
+                <label for="birth-file">Certidão de Nascimento</label>
+              <div class="dropzone">
+                  <input type="file" id="birth-file">
+                  <img src="/assets/icons/cloud-upload.svg" alt="">
+                  <p>Clique aqui para <br>selecionar arquivos</p>
+              </div>
               </div>
             </fieldset>
           </form>
